--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-  "primaryColor": "#7b944c",
+  "primaryColor": "#7a4010",
   "greeting": "שלום! אני העוזר האישי שלך. ",
   "logoUrl": "/uploads/upload-1746111532921.png"
 }
