--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-dialog": "1.1.11",
     "@radix-ui/react-slot": "1.2.0",
     "@tailwindcss/forms": "^0.5.10",
+    "cheerio": "^1.0.0",
     "color-contrast-checker": "^2.1.0",
     "dompurify": "^3.0.9",
     "express-rate-limit": "^7.1.5",
@@ -35,6 +36,7 @@
     "mammoth": "^1.9.0",
     "next": "^14.2.28",
     "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2",
     "openai": "4.96.0",
     "pdf-parse": "^1.1.1",
     "react": "18.2.0",
@@ -55,6 +57,7 @@
     "@types/react": "18.2.61",
     "@types/react-dom": "18.2.19",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/testing-library__react": "^10.0.1",
     "autoprefixer": "10.4.14",
     "cypress": "^13.6.6",
     "esbuild": "^0.25.3",
