--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@firebase/storage": "0.13.7",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@pinecone-database/pinecone": "^5.1.2",
     "@radix-ui/react-dialog": "1.1.11",
     "@radix-ui/react-slot": "1.2.0",
     "@tailwindcss/forms": "^0.5.10",
+    "axios": "^1.9.0",
     "cheerio": "^1.0.0",
     "color-contrast-checker": "^2.1.0",
     "dompurify": "^3.0.9",
@@ -31,7 +33,7 @@
     "formidable": "3.5.4",
     "framer-motion": "^11.0.3",
     "isomorphic-dompurify": "^2.24.0",
-    "langchain": "0.3.24",
+    "langchain": "^0.3.24",
     "lodash": "^4.17.21",
     "mammoth": "^1.9.0",
     "next": "^14.2.28",
