--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-<<<<<<< HEAD
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-=======
     "lib": ["dom", "dom.iterable", "esnext"],
->>>>>>> 502a28d6c8291d45390920c28c5032ac146e2c02
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -22,27 +14,15 @@
     "jsx": "preserve",
     "incremental": true,
     "plugins": [
-      {
-        "name": "next"
-      }
+      { "name": "next" }
     ],
     "paths": {
-<<<<<<< HEAD
-      "@/*": [
-        "./src/*"
-      ]
-    },
-    "types": [
-      "jest",
-      "@testing-library/jest-dom"
-=======
       "@/*": ["./src/*"]
     },
     "types": [
       "jest",
       "@testing-library/jest-dom",
       "node"
->>>>>>> 502a28d6c8291d45390920c28c5032ac146e2c02
     ],
     "typeRoots": [
       "./node_modules/@types",
@@ -51,17 +31,6 @@
   },
   "include": [
     "next-env.d.ts",
-<<<<<<< HEAD
-    ".next/types/**/*.ts",
-    "src/types/**/*.d.ts",
-    "src/__tests__",
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
-=======
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
@@ -69,5 +38,4 @@
     "src/types/**/*.d.ts"
   ],
   "exclude": ["node_modules"]
->>>>>>> 502a28d6c8291d45390920c28c5032ac146e2c02
 }
