Refactor URL ingestion, improve Q&A generation, and add detailed logging

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ dist/
 .next/
 *.log
 .DS_Store
+# Sensitive credential files
+*.json
+service-account-key.json
+*-adminsdk-*.json
+chatbot-e17e5-firebase-adminsdk-fbsvc-696103b98d.json
