--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/testing-library__react": "^10.0.1",
     "autoprefixer": "10.4.14",
     "cypress": "^13.6.6",
+    "dotenv": "^16.5.0",
     "esbuild": "^0.25.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
