--- a/package.json
+++ b/package.json
@@ -3,18 +3,33 @@
   "private": true,
   "version": "1.0.0",
   "description": "Monorepo for the chatbot platform",
+  "engines": {
+    "node": ">=18.18.2"
+  },
   "scripts": {
-    "dev:frontend": "pnpm --filter frontend dev",
-    "dev:backend": "pnpm --filter backend dev",
-    "build:frontend": "pnpm --filter frontend build",
-    "build:backend": "pnpm --filter backend build",
-    "lint": "pnpm --filter \"./apps/**\" --filter \"./packages/**\" lint",
-    "test": "pnpm --filter \"./apps/**\" --filter \"./packages/**\" test"
+    "dev:frontend": "npm run dev -w frontend",
+    "dev:backend": "npm run dev -w backend",
+    "build:frontend": "npm run build -w frontend",
+    "build:backend": "npm run build -w backend",
+    "lint": "npm run lint --workspaces --if-present",
+    "test": "npm run test --workspaces --if-present",
+    "install:all": "npm install"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.1.0",
+    "prettier": "^3.0.0",
     "typescript": "^5.0.0",
-    "eslint": "^8.0.0",
-    "prettier": "^3.0.0"
+    "typescript-eslint": "^8.32.1"
   },
-  "packageManager": "pnpm@8.0.0"
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
+  "dependencies": {
+    "lts": "^2.0.0",
+    "rimraf": "^6.0.1"
+  }
 }
