--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
     "dev:backend": "npm run dev -w backend",
     "build:frontend": "npm run build -w frontend",
     "build:backend": "npm run build -w backend",
-    "lint": "npm run lint --workspaces --if-present",
+    "lint": "eslint . --ext .ts,.tsx",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "test": "npm run test --workspaces --if-present",
     "install:all": "npm install"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
+    "@types/jest": "^29.5.14",
+    "@types/xlsx": "^0.0.35",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^8.57.1",
+    "eslint-config-next": "^15.3.2",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.1.0",
-    "prettier": "^3.0.0",
+    "prettier": "^3.5.3",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.32.1"
   },
